打通第一条交互指令，eda.pcb_Net.getAllNetsName()

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,4 @@
 {
 	"About": "About",
-	"EasyEDA extension SDK v": "EasyEDA extension SDK v${1}"
+	"EasyEDA extension SDK v": "PCB Component Automatic Layout Tool - Version v${1}"
 }
